# envelop

./: .gitignore  Pipfile  README  hosts  hosts.yaml  pyproject.toml  requirements.yml  shapeofwater.yml  thinkpad.yml
host_vars/: ObvsMBP219.yaml  allthemarbles.yaml  localhost
playbooks/: provision.yaml  provision.yml
roles/Datadog.datadog/meta/: .galaxy_install_info
roles/common/: professional_dev.yml
roles/common/defaults/: main.yml
roles/common/files/: erich.ovpn  old_openvpn_hook.sh  vpn.cred
roles/common/tasks/: build_neovim.yml  build_tmux.yml  build_tmuxinator.yml  code_pen.yml  hacks.yml  install_ansible.yml  install_ctags.yml  install_dotfiles.yml  install_esentials.yml  install_essentials.yml  install_firefox.yml  install_fish.yml  install_i3.yml  install_node.yml  install_pyenv.yml  install_rbenv.yml  install_ssh_keys.yml  install_starship.yml  install_tmux.yml  install_vim.yml  install_weechat.yml  main.yml  networking.yml  packages.yml  personal_dev.yml  work_vpn.yml
roles/common/templates/: 000-env.fish.j2  001-homebrew.fish.j2  002-work.fish.j2  ackrc.j2  c_init.vim.j2  coc-settings.json.j2  config.fish.j2  ctagsrc.j2  devx-frontend.yml.j2  fix_poetry_path.py.j2  gitconfig.j2  hermes.yml.j2  hermes_gcal_api.json  hermesweb.yml.j2  i3.config.j2  i3exit.sh.j2  i3status.config.j2  init.vim.j2  mozconfig.j2  resolv.conf.j2  starship.toml.j2  tmux.conf.j2  usual.yml.j2  vpn.yml.j2  zshrc.j2
roles/debian/handlers/: main.yml
roles/debian/tasks/: apt.yml  main.yml
roles/laptop/tasks/: main.yml  wifi.yml
roles/work/defaults/: main.yml
(+8 files in other folders)
