[tool.poetry]
name = "envelop"
version = "0.1.0"
description = ""
authors = ["Erich Blume <blume.erich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.8"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
