[tool.poetry]
name = "envelop"
version = "0.2.0"
description = ""
authors = ["Erich Blume <blume.erich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.11.2"
ansible = "^2.10.4"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
flake8 = "^3.7"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
